# cargo-apk

.github/workflows/: rust.yml
cargo-apk/: CHANGELOG.md  README.md
cargo-apk/src/: apk.rs  main.rs
ndk-build/: README.md
ndk-build/src/: apk.rs  cargo.rs  error.rs  manifest.rs  ndk.rs  readelf.rs
ndk-examples/: Cargo.toml
ndk-examples/examples/: hello_world.rs  jni_audio.rs  looper.rs
